hphp/hack/test/typecheck/print_in_rx9.php.exp
File "print_in_rx9.php", line 9, characters 3-6:
Reactive functions can only call other reactive functions. (Typing[4200])
File "print_in_rx9.php", line 5, characters 8-43:
This function is non-reactive.
