hphp/hack/test/typecheck/print_in_rx9.php
<?hh // strict

<<__Rx>>
function f(): void {
  $a = () ==> {
    print 1;
  };
  // ERROR
  $a();
}
